4.Services and Networking/10.pod-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: custom-pod
spec:
  serviceAccountName: custom-sa
  containers:
  - image: nginx
    name: custom-pod
