4.Services and Networking/11.named-port.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-2
  labels:
    run: nginx2
spec:
  containers:
  - image: nginx
    name: pod
    ports:
    - containerPort: 80
      name: custom-http
