4.Services and Networking/1.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kplabs-service
spec:
  ports:
    - port: 8080
      targetPort: 80
