4.Services and Networking/2.endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: kplabs-service
subsets:
  - addresses:
      - ip: 10.244.4.14
    ports:
      - port: 80
