4.Services and Networking/4.service-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: kplabs-service-selector
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
